# aws-spend-summary

./: CHANGELOG.md  LICENSE  README.md  aws-spend-summary.cabal  awsspendsummary.cabal  flake.nix
.github/workflows/: haskell.yml
app/: Main.hs
src/: AwsSpendSummary.hs
