cabal-version:      3.0
name:               aws-spend-summary
version:            0.2.0.1
synopsis:
    Extract recent daily AWS costs
description:
        Please see the README on GitHub at <https://github.com/danielrolls/aws-spend-summary>
license:            GPL-2.0-only
license-file:       LICENSE
author:             Daniel Rolls
maintainer:         daniel.rolls.27@googlemail.com
copyright:          (c) 2024 Daniel Rolls
category:           AWS
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common deps
    default-language: GHC2021
    ghc-options: -Wall
    build-depends:
        data-default >=0.7.1.1 && <0.9
      , text >=2.0.2 && < 2.2
    default-extensions:
        LambdaCase
      , ScopedTypeVariables
      , OverloadedStrings

library
    import:           deps
    build-depends:
        base >=4.18.1.0 && <4.21
      , amazonka >=2.0 && <2.1
      , amazonka-core >=2.0 && <2.1
      , amazonka-s3 >= 2.0 && <2.1
      , ansi-terminal >= 1.0.2 && <1.2
      , bytestring >=0.11.5.3 && <0.13
      , cassava >=0.5.3.2 && <0.6
      , conduit >=1.3.5 && <1.4
      , containers >=0.6.7 && <0.7
      , http-types >=0.12.4 && <0.13
      , lens >=5.2.3 && <5.4
      , text >=2.0.2 && < 2.2
      , time >=1.12.2 && < 1.15
      , timelens >=0.2.0.2 && <0.3
      , vector >=0.13.1.0 && <0.14
      , zlib >=0.6.3 && <0.8
    exposed-modules:  AwsSpendSummary
    hs-source-dirs:   src

executable aws-spend-summary
    import:           deps
    main-is:          Main.hs
    build-depends:
        base >=4.18.1.0 && <4.21
      , aws-spend-summary
      , optparse-applicative >=0.18.1.0 && < 0.19
    hs-source-dirs:   app

